tests/cases/errors/chandle_display/main.sv
module Top;
  chandle h;
  initial $display("%p", h);
endmodule
